:sparkles: add a API endpoind to change the user password from the old password
