# services/user/controller.go
@@ -11,6 +11,7 @@ func RegisterRoutes(apiGroup *gin.RouterGroup) {
 	userRoutes := apiGroup.Group("/user")
 	{
 		userRoutes.POST("/register", RegisterUser)
+		userRoutes.POST("/change-password", ChangeUserPassword)
 		userRoutes.Use(middlewares.Auth())
 		{
 			userRoutes.GET("/", GetUser)
